# webfetch-mcp-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.devcontainer/: devcontainer.json
src/: cli.rs  web.rs
src/common/: fetcher.rs
utils/: build.sh
